<?xml version="1.0"?>
<package>
  <name>kcf_ros</name>
  <version>0.0.0</version>
  <description>kcf_ros package</description>>

  <maintainer email="higashide@jsk.imi.i.u-tokyo.ac.jp">taichiH</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>autoware_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/kcf_ros.xml"/>
  </export>

</package>
